changed way urls are reconstruced to avoid problems with paths that contain a drive letter.
git-svn-id: http://svn.osgeo.org/geotools/trunk@3035 e5c1c795-43da-0310-a71f-fac65c449510