@@ -51,7 +51,7 @@ import java.nio.channels.*;
 import java.nio.charset.Charset;
 
 /**
- * @version $Id: ShapefileDataSource.java,v 1.9 2003/06/03 21:18:53 ianschneider Exp $
+ * @version $Id: ShapefileDataSource.java,v 1.10 2003/06/06 20:47:14 jmacgill Exp $
  * @author James Macgill, CCG
  * @author Ian Schneider
  */
@@ -90,10 +90,9 @@ public class ShapefileDataSource extends AbstractDataSource implements org.geoto
       dbfext = ".DBF";
       shxext = ".SHX";
     }
-    
-    shpURL = new URL(filename + shpext);
-    dbfURL = new URL(filename + dbfext);
-    shxURL = new URL(filename + shxext);
+    shpURL = new File(filename + shpext).toURL();
+    dbfURL = new File(filename + dbfext).toURL();
+    shxURL = new File(filename + shxext).toURL();
   }
   
   public IDFactory getIDFactory() {
